# hastur

./: .gitignore  .ignore  Cargo.toml  README.md  build.rs  crates-io.list  make_notes.org  shell.nix
design/: expansion-tracking.md  location.md  purpose.md  variables.md
design/implementation/: ast.md  eval.md  parsing.md  paths.md  sensitivity.md
design/interface/: parse_control.md
design/testing/: architecture.md
examples/list_targets/: main.rs
examples/with_eval/: main.rs  test.mk
make_src/: bindgen_wrapper.h  config.h  hastur.c  hastur.h  main.c  makeint.h  read.c  remake.c
proptest-regressions/: tokenizer.txt
proptest-regressions/tokenizer/: mod.txt
src/: eval.rs  file_sequence.rs  lib.rs  pattern.rs  source_location.rs  test_macros.rs  tokenizer.rs  traits.rs  types.rs  variable.rs
src/ast/: mod.rs  proptest.rs  shell.rs  test.rs  text_functions.rs  utils.rs  visit.rs
src/eval/: mod.rs  test.rs
src/evaluated/: block_span.rs  content_reference.rs  mod.rs  nodes.rs  test.rs
src/lexer/: lexer_grammar.lalrpop  lexer_grammar.lalrpop.in  mod.rs
src/parsers/: comment.rs  error_utils.rs  file_sequence.rs  macros.rs  mod.rs  recipe_line.rs
src/tokenizer/: gen_text_matcher.py  mod.rs  text_matcher.rs
src/trees/: ast.rs  mod.rs
test/makefiles/: file_variable.mk
tests/: comments.rs  eval.rs  include.rs  prefix.mk
tests/eval/: eval0.mk
tests/include/: include0.mk  include1.mk
tests/makefiles/: colon_escape_1.mk  comment_intro_variable.mk  dollar_space.mk  function_continuations.mk  ifeq_no_spce.mk  multiple_rules_1.mk  semicolon_dep.mk  (+13 more)
(+53 files in other folders)
